## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# set this to name of cg3 dependency rules
GT_GRAMMARCHECKER=grammarchecker.cg3

# set this to names of cg3 binaries 
GT_GC_TARGETS=grammarchecker.bin

include $(top_srcdir)/am-shared/tools-grammarcheckers-include.am
