## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# set this to name of cg3 dependency rules
GT_GRAMMARCHECKER=

# set this to names of cg3 binaries 
GT_GC_TARGETS=

# set this to the filename of the file being used by voikkogc:
GT_GC_DISTRO=
GT_GC_ZDISTRO=

include $(top_srcdir)/am-shared/tools-grammarcheckers-dir-include.am
