## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Always leave an extra line at the end, and also leave the final \ - this is to
# avoid merge conflicts when adding new script files - if we can keep the lines
# with UND untouched between commits, there will be no conflicts. It requires a
# following line with an indent and a comment, though, to fool the automake
# processing.
bin_SCRIPTS=ufao-gt.sh \
	# Let this line end the definition
include $(top_srcdir)/../giella-core/am-shared/devtest-include.am
