## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Uncomment and list here (space separated) all test scripts that should be run:
#TESTS=pairs.sh 

# List tests that are presently (expected) failures here, ie things that should
# be fixed *later*, but is not critical at the moment:
# XFAIL_TESTS=
include $(top_srcdir)/../giella-core/am-shared/devtest-include.am
