## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# Process subdirs first:
SUBDIRS = tagsets .

##################################################################
#### BEGIN: Add local processing instructions BELOW this line ####
##################################################################



##################################################################
#### END: Add local processing instructions ABOVE this line ######
##################################################################

####### Other targets: ###########

# cleaning
clean-local:
	-rm -f *.hfst *.gz

include $(top_srcdir)/am-shared/tools-mt-apertium-dir-include.am
